--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
 body {
-    background-color: rgb(214, 191, 236)
+    background-color: rgb(43, 42, 44);
+    overflow: auto;
+}
+img.know-icons{
+    border: 2px solid #4d4a4a; 
+    position: relative; 
+    transition: 1s;
+    margin: 10px;
+    width: 20px;
+    height: 20px
+   }
+img.know-icons:hover {
+    z-index: 10; 
+    transform: scale(3);
+   }
+.left-blocks {
+    margin: 20px;
+    padding: 10px 30px;
+    border: 1px solid rgb(148, 139, 139);
+    background-color:rgb(231, 216, 216);
+    width: 60%;
+    display: block;
+    overflow-wrap: normal; 
+    display: block;
+    overflow: auto;
+    border-radius: 25px;
+
+}
+.right-blocks {
+    margin: 20px;
+    padding: 10px 30px;
+    border: 1px solid rgb(148, 139, 139);
+    background-color:rgb(218, 231, 247);
+    width: 80%;
+    display: block;
+    overflow-wrap: normal; 
+    display: block;
+    overflow: auto;
+    border-radius: 25px;
+}
+.img-list {
+    vertical-align: middle;
+}
+table {
+    
+    padding: 20px;
+    padding-top: 0px;
+   
+}
+td {
+    border: 20px solid rgb(83, 81, 81);
+    background-color:rgb(136, 127, 127);
+    border-radius: 15px;
+}
+
+.top {
+    margin-left: 30px;
+    color:rgb(231, 216, 216);
+}
+.top-img {
+    border-radius: 100%; 
+    border: 2px solid rgb(144, 147, 150);
+    box-shadow: 0 0 7px #666;
+    margin-left: 30px
 }
