--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(43, 42, 44);
+    background-color: rgb(69, 67, 71);
     overflow: auto;
 }
 img.know-icons{
@@ -14,53 +14,108 @@ img.know-icons:hover {
     z-index: 10; 
     transform: scale(3);
    }
+.logo-img{
+    width: 40px;
+    position: relative; 
+}
+
 .left-blocks {
+
     margin: 20px;
-    padding: 10px 30px;
+    padding: 20px 30px;
     border: 1px solid rgb(148, 139, 139);
     background-color:rgb(231, 216, 216);
-    width: 60%;
-    display: block;
+    /* width: 90%; */
+    display: box;
     overflow-wrap: normal; 
-    display: block;
     overflow: auto;
     border-radius: 25px;
 
 }
+.left {
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    width: 40%;
+}
 .right-blocks {
+
     margin: 20px;
-    padding: 10px 30px;
+    padding: 20px;
     border: 1px solid rgb(148, 139, 139);
-    background-color:rgb(218, 231, 247);
-    width: 80%;
-    display: block;
+    background-color:rgb(218, 229, 231);
+    /* width: 90%; */
+    display: box;
     overflow-wrap: normal; 
-    display: block;
     overflow: auto;
     border-radius: 25px;
+
+}
+
+.right {
+    display:flex;
+    flex-direction: column;
+    width: 60%;
+
 }
 .img-list {
     vertical-align: middle;
-}
-table {
-    
-    padding: 20px;
-    padding-top: 0px;
-   
-}
-td {
-    border: 20px solid rgb(83, 81, 81);
-    background-color:rgb(136, 127, 127);
-    border-radius: 15px;
+    padding-left: 10px;
 }
 
 .top {
     margin-left: 30px;
-    color:rgb(231, 216, 216);
+    color:rgb(246, 251, 252);
 }
+
+
 .top-img {
     border-radius: 100%; 
     border: 2px solid rgb(144, 147, 150);
-    box-shadow: 0 0 7px #666;
-    margin-left: 30px
+    box-shadow: 0 0 6px #666;
+    margin: 30px;
+   
+}
+.footer {
+    box-sizing: border-box;
+    display: flex;
+    margin: 20px;
+    padding: 0px 30px;
+    border: 1px solid rgb(148, 139, 139);
+    background-color:rgb(153, 189, 194);
+    width: 90%;
+    overflow-wrap: normal;
+    overflow: auto;
+    border-radius: 8px;
+    color:rgb(83, 81, 81);
+    /* justify-content: space-evenly; */
+    align-items: baseline;
+    
+
+}
+
+.footer-element {
+    margin-right:10%;
+}
+
+.main {
+    box-sizing: border-box;
+    display: flex;
+    border: 20px solid rgb(83, 81, 81);
+    background-color:rgb(136, 127, 127);
+    border-radius: 15px;
+    width: 90%;
+    margin: 20px;
+    
+
+}
+nav {
+    width: 90%;
+    margin: auto;
+}
+
+.menu {
+    display: inline;
+    color:rgb(218, 229, 231);
+    padding: 12px;
 }
