--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ img.know-icons:hover {
 .left {
     display:flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content:right;
     width: 40%;
+
 }
 .right-blocks {
 
@@ -82,7 +83,7 @@ img.know-icons:hover {
     margin: 20px;
     padding: 0px 30px;
     border: 1px solid rgb(148, 139, 139);
-    background-color:rgb(153, 189, 194);
+    background-color:rgb(139, 151, 153);
     width: 90%;
     overflow-wrap: normal;
     overflow: auto;
@@ -95,15 +96,15 @@ img.know-icons:hover {
 }
 
 .footer-element {
-    margin-right:10%;
+    margin-right:20%;
 }
 
 .main {
     box-sizing: border-box;
     display: flex;
-    border: 20px solid rgb(83, 81, 81);
+    border: 10px solid rgb(83, 81, 81);
     background-color:rgb(136, 127, 127);
-    border-radius: 15px;
+    border-radius: 2%;
     width: 90%;
     margin: 20px;
     
@@ -114,8 +115,8 @@ nav {
     margin: auto;
 }
 
-.menu {
-    display: inline;
+ul.menu li {
+    display: inline-block;
     color:rgb(218, 229, 231);
     padding: 12px;
 }
